--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.2.3",
     "nookies": "^2.5.2",
     "react": "18.2.0",
+    "react-calendar": "^4.6.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.5",
