--- a/.gitignore
+++ b/.gitignore
@@ -28,5 +28,10 @@ yarn-error.log*
 # local env files
 .env*.local
 
+# environment variables
+.env.local
+.env.development.local
+.env
+
 # vercel
 .vercel
