--- a/.gitignore
+++ b/.gitignore
@@ -25,13 +25,11 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
-# local env files
+# env files
 .env*.local
-
-# environment variables
-.env.local
-.env.development.local
 .env
+
+
 
 # vercel
 .vercel
